--- a/index.html
+++ b/index.html
@@ -83,15 +83,25 @@
 
 <script>
   const runaway = document.getElementById("runaway");
+
+  const shakeBtn = document.getElementById("shakeBtn");
+  const colorBtn = document.getElementById("colorBtn");
+  const spinBtn = document.getElementById("spinBtn");
+  const magnetBtn = document.getElementById("magnetBtn");
+  const countdownBtn = document.getElementById("countdownBtn");
+  const ghostBtn = document.getElementById("ghostBtn");
+  const trollBtn = document.getElementById("trollBtn");
+
   const buttons = document.querySelectorAll(".container button");
 
-  runaway.onmouseenter = () => {
+  runaway.addEventListener("mouseenter", () => {
     const x = Math.random() * (window.innerWidth - 150);
     const y = Math.random() * (window.innerHeight - 60);
     runaway.style.left = x + "px";
     runaway.style.top = y + "px";
-    runaway.style.background = `hsl(${Math.random()*360},100%,60%)`;
-  };
+    runaway.style.background =
+      `hsl(${Math.random() * 360}, 100%, 60%)`;
+  });
 
   shakeBtn.onclick = () => {
     document.body.classList.add("shake");
@@ -100,7 +110,7 @@
 
   colorBtn.onclick = () => {
     document.body.style.background =
-      `hsl(${Math.random()*360},80%,50%)`;
+      `hsl(${Math.random() * 360}, 80%, 50%)`;
   };
 
   spinBtn.onclick = () => {
@@ -113,15 +123,18 @@
       btn.style.position = "absolute";
       btn.style.left = "50%";
       btn.style.top = "50%";
+      btn.style.transform = "translate(-50%, -50%)";
     });
   };
 
   countdownBtn.onclick = () => {
     let count = 3;
     countdownBtn.textContent = count;
+
     const timer = setInterval(() => {
       count--;
       countdownBtn.textContent = count;
+
       if (count === 0) {
         clearInterval(timer);
         alert("💥 BOOM!");
@@ -136,11 +149,12 @@
   };
 
   trollBtn.onclick = () => {
-    const texts = ["WHY 😭", "STOP 😡", "AGAIN?", "NO 😈", "YOU WIN...NOT" "OK 😅"];
+    const texts = ["WHY 😭", "STOP 😡", "AGAIN?", "NO 😈", "OK 😅"];
     trollBtn.textContent =
       texts[Math.floor(Math.random() * texts.length)];
   };
 </script>
+
 
 </body>
 </html>
